tests/baselines/reference/esDecorators-classDeclaration-missingEmitHelpers-staticComputedAutoAccessor.errors.txt
tests/cases/conformance/esDecorators/classDeclaration/main.ts(8,5): error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/conformance/esDecorators/classDeclaration/main.ts(8,5): error TS2343: This syntax requires an imported helper named '__propKey' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/conformance/esDecorators/classDeclaration/main.ts(8,5): error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/conformance/esDecorators/classDeclaration/main.ts(8,26): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.


==== tests/cases/conformance/esDecorators/classDeclaration/main.ts (4 errors) ====
    export {}
    
    declare var dec: any;
    declare var x: any;
    
    // needs: __esDecorate, __runInitializers, __propKey
    class C {
        @dec static accessor [x]: any;
        ~~~~
!!! error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
        ~~~~
!!! error TS2343: This syntax requires an imported helper named '__propKey' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
        ~~~~
!!! error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                             ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    }
    
==== tests/cases/conformance/esDecorators/classDeclaration/tslib.d.ts (0 errors) ====
    export {}
    